# greeter

./: AUTHORS  Makefile.am  README  README.md  autogen.sh  configure.ac  lightdm-dotfive-greeter.doap
conf/: Makefile.am  lightdm-dotfive-greeter.conf
data/: lightdm-dotfive-greeter.conf  lightdm-dotfive-greeter.desktop  lightdm-dotfive.conf
po/: POTFILES.in
src/: Makefile.am  cc1  config.vala  config.vapi  dotfive-greeter.vala  fixes.vapi  greeterwebview.vala  javascriptcore.vapi.patch  main-window.vala  webkitgtk-3.0.vapi
themes/: Makefile.am
themes/dotfive/: Makefile.am  index.html  index.theme  style.css
vapi/: javascriptcore.vapi  webkitgtk-3.0.deps
